langda/history/DoubleSimple_5Round/test_history/pl___aircr:rough.pl_run4/#test_results_result.txt
Error evaluating Problog model:
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1349, in label_tokens
    parser.label_tokens(self.string, self.tokens)
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1186, in label_tokens
    raise ParseError(string, "Expected binary operator", t.location)
problog.parser.ParseError: Expected binary operator at 40:37.Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 40:20.% Problog Inference Result：
goal_reached(1) = 0.1325
goal_reached(2) = 0.1688
goal_reached(3) = 0.1108
goal_reached(4) = 0.0950
goal_reached(5) = 0.0611
overrun_exception(1) = 0.0000
overrun_exception(2) = 0.0360
overrun_exception(3) = 0.0406
overrun_exception(4) = 0.0225
overrun_exception(5) = 0.0210